--- a/src/ToDoCDN/package.json
+++ b/src/ToDoCDN/package.json
@@ -11,7 +11,7 @@
     "source-map-loader": "0.1.5",
     "ts-jest": "^17.0.0",
     "ts-loader": "1.0.0",
-    "typescript": "^2.0.9",
+    "typescript": "2.3.2",
     "webpack": "^1.13.3"
   },
   "dependencies": {
@@ -22,6 +22,7 @@
     "@types/react-dom": "^0.14.18",
     "@types/react-redux": "^4.4.32",
     "@types/redux-thunk": "^2.1.31",
+    "assets-webpack-plugin": "^3.5.1",
     "axios": "^0.15.2",
     "classnames": "2.2.5",
     "lodash": "^4.16.6",
@@ -51,5 +52,6 @@
     "test": "jest --no-cache",
     "test-watch": "jest --no-cache --watch"
   }
+, "-vs-binding":{"BeforeBuild":["install"]}
 }
 
