--- a/src/Todo/appsettings.json
+++ b/src/Todo/appsettings.json
@@ -9,5 +9,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "Core": {
+    "CdnUrl": "http://localhost:1855"
+  } 
 }
