--- a/src/Todo/Todo.csproj
+++ b/src/Todo/Todo.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.0.2" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="1.1.1" />
     <PackageReference Include="OctoPack" Version="3.6.1" />
+    <PackageReference Include="OctopusTools" Version="4.15.2" />
     <PackageReference Include="System.Runtime" Version="4.1.0" />
   </ItemGroup>
 
