--- a/src/ToDoCDN/ToDoCDN.nuspec
+++ b/src/ToDoCDN/ToDoCDN.nuspec
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
  <metadata>
-   <id>ToDoCDN</id>
+   <id>ToDoCDN-dicko2</id>
    <title>ToDoCDN</title>
    <authors>Joel Dickson</authors>
    <owners>Agoda</owners>
