--- a/src/Todo.Tests/Todo.Tests.csproj
+++ b/src/Todo.Tests/Todo.Tests.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="NSubstitute" Version="2.0.3" />
     <PackageReference Include="NUnit" Version="3.6.1" />
     <PackageReference Include="NUnit.Console" Version="3.6.1" />
+    <PackageReference Include="NUnit.Extension.TeamCityEventListener" Version="1.0.2" />
     <packagereference Include="NUnit3TestAdapter" Version="3.8.0-alpha1"></packagereference>
     <PackageReference Include="Shouldly" Version="2.8.2" />
   </ItemGroup>
